# word1e

./: .gitignore  CMakeLists.txt  bot.c  json.c  json.h  mkwx.c  wbot.c  wordsmith.c
libword1e/: CMakeLists.txt  guess.c  score.c  threadpool.c  word.c  word_tree.c
libword1e/include/: guess.h  hist.h  score.h  threadpool.h  word.h  word_tree.h
